Grease Pencil merge down layer duplicates wrong frame #104371

Closed
opened 2023-02-06 09:55:05 +01:00 by Amélie Fondevilla · 7 comments

System Information
Operating system: Linux-5.4.0-137-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03

Blender Version
Broken: version: 3.5.0 Alpha
Worked: idk (not working at least since 3.1)

Short description of error
Using layer "Merge Down" operation sometimes changes the animation.

It happens when we try to merge down the layers in the following setup.

Capture d’écran du 2023-02-06 09-42-20.png

Layer_2 has keyframes at 1 and 2, while Layer_1 has keyframe at 1, does not have keyframe at 2, and has further keyframes > 2 (here 5 and 6).
Then, if the current keyframe is 5 or above, then the merge down will silently fail : instead of copying the strokes of Layer_1.frame 1 to create frame 2, it will copy the strokes of the active keyframe of Layer_1 (here frame 6).

Exact steps for others to reproduce the error
You can try merging down the layers in the blender file : bug_mergedown.blend.

See the error in video here :
merge_down_error.mp4

**System Information** Operating system: Linux-5.4.0-137-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.47.03 **Blender Version** Broken: version: 3.5.0 Alpha Worked: idk (not working at least since 3.1) **Short description of error** Using layer "Merge Down" operation sometimes changes the animation. It happens when we try to merge down the layers in the following setup. ![Capture d’écran du 2023-02-06 09-42-20.png](https://archive.blender.org/developer/F14251363/Capture_d_écran_du_2023-02-06_09-42-20.png) Layer_2 has keyframes at 1 and 2, while Layer_1 has keyframe at 1, does not have keyframe at 2, and has further keyframes > 2 (here 5 and 6). Then, if the current keyframe is 5 or above, then the merge down will silently fail : instead of copying the strokes of Layer_1.frame 1 to create frame 2, it will copy the strokes of the active keyframe of Layer_1 (here frame 6). **Exact steps for others to reproduce the error** You can try merging down the layers in the blender file : [bug_mergedown.blend](https://archive.blender.org/developer/F14251399/bug_mergedown.blend). See the error in video here : [merge_down_error.mp4](https://archive.blender.org/developer/F14251385/merge_down_error.mp4)
Author
Member

Added subscriber: @amelief

Added subscriber: @amelief
Amélie Fondevilla self-assigned this 2023-02-06 09:57:54 +01:00

Added subscriber: @HenriHebeisen

Added subscriber: @HenriHebeisen
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm this on latest master.

Can confirm this on latest master.

This issue was referenced by 6d297c35c8

This issue was referenced by 6d297c35c8658b3e0579767d4a9fd3b761e81a61
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104371
No description provided.